--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.26.5",
+    "axios": "^1.10.0",
     "json-server": "^0.17.4",
     "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
-    "react-router": "^6.30.1",
+    "react-router-dom": "^6.30.1",
     "redux-thunk": "^3.1.0",
     "tailwindcss": "^4.1.11"
   },
